sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:11: error: not found: value debut
for (i <- debut to fin) {
          ^AlgCocktailSort2:16: error: not found: value debut
for (k <- fin to debut by -1) {
                 ^AlgCocktailSort2:21: error: not found: value debut
	debut +=1
        ^